2003-01-05 Wari Wahab <pyblosxom@wari.per.sg>
	* Fixed directory recursion when depth is more than one
	* Made rendering of categories to work more like blosxom (Do not honor
	  num_entries)

2002-11-25 Wari Wahab <pyblosxom@wari.per.sg>
	* Made Conditional HTTP as a user option

2002-11-23 Wari Wahab <pyblosxom@wari.per.sg>
	* 3rd Revision release
	* Changes in preformatters. All preformatters now resides in
	  libs/preformatters/ directory. The do not have the preformatter_
	  prefix in the filename anymore. Preformatters should still work
	  without changes except for the filename. If possible (for the
	  future) preformatters should subclass PreFormatterBase
	* Entry bugs fixed, if you set a date or category in PATH_INFO, you
	  should get a full list of entries other than just py['num_entries']
	* Support for Etag and Last-Modified. Should save some bandwidth here.
	  Unfortunately not a user definable option yet
	* Pyblosxom now generates 404 errors when a query returns no entries
	* Added 404_handler.py in contrib directory for users interested in
	  Funky Caching
	* Added an excellent preformatter from John Abe
	* Added a funky preformatter script by Abe Fettig
	* pyarchives.py is now located in libs/plugins/ directory, to clean up
	  distribution as well as for future expansion
	* added logRequest() method in libs/tools.py. Look at pyblosxom.py on
	  how to activate it (grep logRequest pyblosxom.py). This is useful if
	  you cannot get access to your own raw http logs. Log format is NCSA
	  httpd compatible, so you can use tools like webalizer to analyze
	  your log files.
	* NOT in this version - Fixes for Windows Webservers. See - 
	  http://roughingit.subtlehints.net/py_stuff/thingsTodo/pyblosxom_for_Win32_.html

	
2002-11-03 Wari Wahab <pyblosxom@wari.per.sg>
	* 2nd Revision release
	* Added fix to reading files that pyblosxom cannot read by Nick
	* Flavour Overrides implementation, requested by Wam and done by Nick